--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -16,9 +16,8 @@
 title: tobi-wan-kenobi 
 email: tobi-wan-kenobi@users.noreply.github.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Thoughts on software development and team development from somebody
-  who really has no clue what he is doing, but is exploring those topics
-  anyhow.
+  /dev/random ramblings on software development (and sometimes team
+  development). And sometimes, it's just /dev/urandom noise.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  tobi-wan-kenobi
