--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -21,6 +21,8 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  tobi-wan-kenobi
+disqus:
+    shortname: tobiwankenobi
 
 # Build settings
 markdown: kramdown
